--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -4,7 +4,7 @@ html,body{
 }
 
 body{
-    background-color: black;
+    background-color: green;
 }
 
 h1{
@@ -66,4 +66,60 @@ input{
 
 .GObutton input{
     width: 100%;
+}
+
+/*Sign In Stuff*/
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="Username"] {
+  margin-top: 25px;
+  margin-bottom: 10px;
+  border-bottom-right-radius: 100;
+  border-bottom-left-radius: 100;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 100;
+  border-top-right-radius: 100;
+}
+select{ 
+ display:inline-block;
+}
+#signUp{ 
+ margin-top: 15px;
+}
+
+
+.button {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+    align-items: center;
+}
+
+.button:hover {
+    background-color: #008CBA;
+    color: white;
 }
